--- a/public/css/main.css
+++ b/public/css/main.css
@@ -365,20 +365,26 @@ button:focus {
 
 /* line 238, ../../scss/main.scss */
 .hero-padding {
-  padding: 30px 28px 430px;
+  padding: 30px 28px 230px;
+}
+@media screen and (min-width: 400px) {
+  /* line 238, ../../scss/main.scss */
+  .hero-padding {
+    padding: 30px 28px 430px;
+  }
 }
 
-/* line 242, ../../scss/main.scss */
+/* line 246, ../../scss/main.scss */
 .base-section-padding {
   text-align: center;
   padding: 110px 0 135px;
 }
-/* line 246, ../../scss/main.scss */
+/* line 250, ../../scss/main.scss */
 .base-section-padding.telegraphic {
   padding-bottom: 80px;
 }
 
-/* line 251, ../../scss/main.scss */
+/* line 255, ../../scss/main.scss */
 .logo {
   margin: 0 auto;
   text-indent: -9999px;
@@ -392,7 +398,7 @@ button:focus {
 /****************************************
 * Intro animations
 ****************************************/
-/* line 271, ../../scss/main.scss */
+/* line 275, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second,
 .js .hero-container p,
@@ -401,7 +407,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 274, ../../scss/main.scss */
+/* line 278, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second {
   -webkit-transform: translate3d(0, 7.5px, 0);
@@ -410,7 +416,7 @@ button:focus {
   -o-transform: translate3d(0, 7.5px, 0);
   transform: translate3d(0, 7.5px, 0);
 }
-/* line 276, ../../scss/main.scss */
+/* line 280, ../../scss/main.scss */
 .js .hero-tv {
   -webkit-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
   -moz-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
@@ -423,7 +429,7 @@ button:focus {
   -o-transform-origin: 25% 50%;
   transform-origin: 25% 50%;
 }
-/* line 282, ../../scss/main.scss */
+/* line 286, ../../scss/main.scss */
 .js .hero {
   -webkit-perspective: 1100;
   -moz-perspective: 1100;
@@ -431,7 +437,7 @@ button:focus {
   -o-perspective: 1100;
   perspective: 1100;
 }
-/* line 284, ../../scss/main.scss */
+/* line 288, ../../scss/main.scss */
 .js .hero-header-first {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -442,7 +448,7 @@ button:focus {
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 289, ../../scss/main.scss */
+/* line 293, ../../scss/main.scss */
 .js .hero-header-second {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -453,7 +459,7 @@ button:focus {
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 295, ../../scss/main.scss */
+/* line 299, ../../scss/main.scss */
 .js .hero-container p,
 .js .hero-container .sign-up {
   -webkit-transition: opacity 1000ms ease;
@@ -465,7 +471,7 @@ button:focus {
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
-/* line 300, ../../scss/main.scss */
+/* line 304, ../../scss/main.scss */
 .js .hero-tv {
   -webkit-transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
   -moz-transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -477,7 +483,7 @@ button:focus {
   transition-delay: 1200ms;
   -webkit-backface-visibility: hidden;
 }
-/* line 312, ../../scss/main.scss */
+/* line 316, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container p,
@@ -486,7 +492,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 315, ../../scss/main.scss */
+/* line 319, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second {
   -webkit-transform: translate3d(0, 0, 0);
@@ -495,7 +501,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 317, ../../scss/main.scss */
+/* line 321, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
   -webkit-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
   -moz-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
@@ -503,13 +509,13 @@ button:focus {
   -o-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
   transform: translate3d(-50%, 0, 0) rotateZ(0deg);
 }
-/* line 323, ../../scss/main.scss */
+/* line 327, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 326, ../../scss/main.scss */
+/* line 330, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   -webkit-transform: translate3d(0, 15px, 0);
@@ -518,7 +524,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 329, ../../scss/main.scss */
+/* line 333, ../../scss/main.scss */
 .js .features h2 {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -529,41 +535,41 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 334, ../../scss/main.scss */
+/* line 338, ../../scss/main.scss */
 .js .features .feature {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
   -o-transition: all 750ms ease;
   transition: all 750ms ease;
 }
-/* line 336, ../../scss/main.scss */
+/* line 340, ../../scss/main.scss */
 .js .features .feature-first {
   -webkit-transition-delay: 200ms;
   -moz-transition-delay: 200ms;
   -o-transition-delay: 200ms;
   transition-delay: 200ms;
 }
-/* line 338, ../../scss/main.scss */
+/* line 342, ../../scss/main.scss */
 .js .features .feature-second {
   -webkit-transition-delay: 400ms;
   -moz-transition-delay: 400ms;
   -o-transition-delay: 400ms;
   transition-delay: 400ms;
 }
-/* line 340, ../../scss/main.scss */
+/* line 344, ../../scss/main.scss */
 .js .features .feature-third {
   -webkit-transition-delay: 600ms;
   -moz-transition-delay: 600ms;
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 347, ../../scss/main.scss */
+/* line 351, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 350, ../../scss/main.scss */
+/* line 354, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   -webkit-transform: translate3d(0, 0, 0);
@@ -572,7 +578,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 356, ../../scss/main.scss */
+/* line 360, ../../scss/main.scss */
 .js .telegraphic h2, .js .telegraphic .slider {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -582,7 +588,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 362, ../../scss/main.scss */
+/* line 366, ../../scss/main.scss */
 .js .telegraphic h2, .js .telegraphic .slider {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -593,14 +599,14 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 367, ../../scss/main.scss */
+/* line 371, ../../scss/main.scss */
 .js .telegraphic .slider {
   -webkit-transition-delay: 300ms;
   -moz-transition-delay: 300ms;
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 373, ../../scss/main.scss */
+/* line 377, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .telegraphic.active h2, .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .telegraphic.active .slider {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -610,13 +616,13 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 384, ../../scss/main.scss */
+/* line 388, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active .macbook {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 387, ../../scss/main.scss */
+/* line 391, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active .macbook {
   -webkit-transform: translate3d(0, 0, 0);
@@ -625,7 +631,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 393, ../../scss/main.scss */
+/* line 397, ../../scss/main.scss */
 .js .customizable h2, .js .customizable .macbook {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -635,7 +641,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 399, ../../scss/main.scss */
+/* line 403, ../../scss/main.scss */
 .js .customizable h2, .js .customizable .macbook {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -646,14 +652,14 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 404, ../../scss/main.scss */
+/* line 408, ../../scss/main.scss */
 .js .customizable .macbook {
   -webkit-transition-delay: 300ms;
   -moz-transition-delay: 300ms;
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 410, ../../scss/main.scss */
+/* line 414, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active h2, .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .customizable.active .macbook {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -663,14 +669,14 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 422, ../../scss/main.scss */
+/* line 426, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active p,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active .sign-up {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 426, ../../scss/main.scss */
+/* line 430, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active p
 .sign-up {
@@ -680,7 +686,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 432, ../../scss/main.scss */
+/* line 436, ../../scss/main.scss */
 .js footer h2, .js footer p, .js footer .sign-up {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -690,7 +696,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 438, ../../scss/main.scss */
+/* line 442, ../../scss/main.scss */
 .js footer h2, .js footer p, .js footer .sign-up {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -701,14 +707,14 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 443, ../../scss/main.scss */
+/* line 447, ../../scss/main.scss */
 .js footer .macbook {
   -webkit-transition-delay: 300ms;
   -moz-transition-delay: 300ms;
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 449, ../../scss/main.scss */
+/* line 453, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active h2, .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active p, .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active footer.active .sign-up {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -722,23 +728,23 @@ button:focus {
 /****************************************
 * Index
 ****************************************/
-/* line 460, ../../scss/main.scss */
+/* line 464, ../../scss/main.scss */
 .menu-header {
   position: relative;
   z-index: 10;
 }
 
-/* line 466, ../../scss/main.scss */
+/* line 470, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin: 5px 0 0 15px;
 }
-/* line 470, ../../scss/main.scss */
+/* line 474, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 475, ../../scss/main.scss */
+/* line 479, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -759,11 +765,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 488, ../../scss/main.scss */
+/* line 492, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 491, ../../scss/main.scss */
+/* line 495, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -774,31 +780,32 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 499, ../../scss/main.scss */
+/* line 503, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 503, ../../scss/main.scss */
+/* line 507, ../../scss/main.scss */
 .hero-container {
   margin: 0 auto;
   max-width: 650px;
   padding-bottom: 30px;
 }
-/* line 508, ../../scss/main.scss */
+/* line 512, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 513, ../../scss/main.scss */
+/* line 517, ../../scss/main.scss */
 .on-top {
   z-index: 99;
   position: relative;
 }
 
-/* line 518, ../../scss/main.scss */
+/* line 522, ../../scss/main.scss */
 .hero-tv {
-  width: 829px;
+  width: 100%;
+  max-width: 829px;
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -808,13 +815,13 @@ button:focus {
   transform: translateX(-50%);
 }
 
-/* line 525, ../../scss/main.scss */
+/* line 530, ../../scss/main.scss */
 .macbook {
   position: relative;
-  width: 828px;
+  max-width: 828px;
   margin: 50px auto 0;
 }
-/* line 530, ../../scss/main.scss */
+/* line 535, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
@@ -824,19 +831,19 @@ button:focus {
   left: 12.1%;
   overflow: hidden;
 }
-/* line 540, ../../scss/main.scss */
+/* line 545, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 547, ../../scss/main.scss */
+/* line 552, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 551, ../../scss/main.scss */
+/* line 556, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -844,22 +851,29 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 558, ../../scss/main.scss */
+/* line 563, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 560, ../../scss/main.scss */
-.feature i {
-  font-size: 90px;
-  margin-bottom: 65px;
-}
 /* line 565, ../../scss/main.scss */
+.feature i {
+  font-size: 70px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 400px) {
+  /* line 565, ../../scss/main.scss */
+  .feature i {
+    font-size: 90px;
+    margin-bottom: 65px;
+  }
+}
+/* line 575, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 571, ../../scss/main.scss */
+/* line 581, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -871,44 +885,44 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 579, ../../scss/main.scss */
+/* line 589, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 582, ../../scss/main.scss */
+/* line 592, ../../scss/main.scss */
 footer.base-section-padding {
   padding: 80px 0 300px;
 }
-/* line 585, ../../scss/main.scss */
+/* line 595, ../../scss/main.scss */
 footer.base-section-padding .sign-up {
   margin: 40px 0 150px;
 }
-/* line 588, ../../scss/main.scss */
+/* line 598, ../../scss/main.scss */
 footer.base-section-padding .sign-up .base-input {
   border: 2px solid #d0d0d0;
 }
-/* line 591, ../../scss/main.scss */
+/* line 601, ../../scss/main.scss */
 footer.base-section-padding i {
   position: relative;
   top: 15px;
   margin: 0 -3px 0;
 }
-/* line 597, ../../scss/main.scss */
+/* line 607, ../../scss/main.scss */
 footer.base-section-padding a {
   color: #7118b2;
 }
-/* line 600, ../../scss/main.scss */
+/* line 610, ../../scss/main.scss */
 footer.base-section-padding a:hover {
   color: #8e1edf;
 }
 
-/* line 604, ../../scss/main.scss */
+/* line 614, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 608, ../../scss/main.scss */
+/* line 618, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -918,7 +932,7 @@ footer.base-section-padding a:hover {
   position: relative;
   height: 100%;
 }
-/* line 613, ../../scss/main.scss */
+/* line 623, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -937,12 +951,12 @@ footer.base-section-padding a:hover {
   top: 0;
   left: 0;
 }
-/* line 622, ../../scss/main.scss */
+/* line 632, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 627, ../../scss/main.scss */
+/* line 637, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -960,7 +974,7 @@ footer.base-section-padding a:hover {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 634, ../../scss/main.scss */
+/* line 644, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -974,7 +988,7 @@ footer.base-section-padding a:hover {
   float: left;
   cursor: pointer;
 }
-/* line 643, ../../scss/main.scss */
+/* line 653, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -989,12 +1003,12 @@ footer.base-section-padding a:hover {
   opacity: 0;
 }
 
-/* line 651, ../../scss/main.scss */
+/* line 661, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 655, ../../scss/main.scss */
+/* line 665, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1014,7 +1028,7 @@ footer.base-section-padding a:hover {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 667, ../../scss/main.scss */
+/* line 677, ../../scss/main.scss */
 .slider-pagination li.active {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -1027,7 +1041,7 @@ footer.base-section-padding a:hover {
 /****************************************
 * Misc.
 ****************************************/
-/* line 678, ../../scss/main.scss */
+/* line 688, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
