--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -371,7 +371,7 @@ button:focus {
 /* line 242, ../../scss/main.scss */
 .base-section-padding {
   text-align: center;
-  padding: 110px 0 135px;
+  padding: 90px 0 125px;
 }
 /* line 246, ../../scss/main.scss */
 .base-section-padding.telegraphic {
@@ -812,31 +812,36 @@ button:focus {
 .macbook {
   position: relative;
   width: 828px;
-  margin: 50px auto 0;
+  margin: 30px auto 0;
 }
 /* line 530, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
-  width: 75.8%;
-  height: 72.8%;
-  top: 14.5%;
-  left: 12.1%;
+  width: 626px;
+  height: 392px;
+  top: 58px;
+  left: 101px;
   overflow: hidden;
 }
-/* line 540, ../../scss/main.scss */
+/* line 539, ../../scss/main.scss */
+.macbook .macbook-viewport img {
+  width: 75%;
+  pointer-events: none;
+}
+/* line 545, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 547, ../../scss/main.scss */
+/* line 552, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 551, ../../scss/main.scss */
+/* line 556, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -844,22 +849,22 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 558, ../../scss/main.scss */
+/* line 563, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 560, ../../scss/main.scss */
+/* line 565, ../../scss/main.scss */
 .feature i {
   font-size: 90px;
   margin-bottom: 65px;
 }
-/* line 565, ../../scss/main.scss */
+/* line 570, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 571, ../../scss/main.scss */
+/* line 576, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -871,44 +876,44 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 579, ../../scss/main.scss */
+/* line 584, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 582, ../../scss/main.scss */
+/* line 587, ../../scss/main.scss */
 footer.base-section-padding {
   padding: 80px 0 300px;
 }
-/* line 585, ../../scss/main.scss */
+/* line 590, ../../scss/main.scss */
 footer.base-section-padding .sign-up {
   margin: 40px 0 150px;
 }
-/* line 588, ../../scss/main.scss */
+/* line 593, ../../scss/main.scss */
 footer.base-section-padding .sign-up .base-input {
   border: 2px solid #d0d0d0;
 }
-/* line 591, ../../scss/main.scss */
+/* line 596, ../../scss/main.scss */
 footer.base-section-padding i {
   position: relative;
   top: 15px;
   margin: 0 -3px 0;
 }
-/* line 597, ../../scss/main.scss */
+/* line 602, ../../scss/main.scss */
 footer.base-section-padding a {
   color: #7118b2;
 }
-/* line 600, ../../scss/main.scss */
+/* line 605, ../../scss/main.scss */
 footer.base-section-padding a:hover {
   color: #8e1edf;
 }
 
-/* line 604, ../../scss/main.scss */
+/* line 609, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 608, ../../scss/main.scss */
+/* line 613, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -918,7 +923,7 @@ footer.base-section-padding a:hover {
   position: relative;
   height: 100%;
 }
-/* line 613, ../../scss/main.scss */
+/* line 618, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -937,12 +942,12 @@ footer.base-section-padding a:hover {
   top: 0;
   left: 0;
 }
-/* line 622, ../../scss/main.scss */
+/* line 627, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 627, ../../scss/main.scss */
+/* line 632, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -960,7 +965,7 @@ footer.base-section-padding a:hover {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 634, ../../scss/main.scss */
+/* line 639, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -974,7 +979,7 @@ footer.base-section-padding a:hover {
   float: left;
   cursor: pointer;
 }
-/* line 643, ../../scss/main.scss */
+/* line 648, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -989,12 +994,12 @@ footer.base-section-padding a:hover {
   opacity: 0;
 }
 
-/* line 651, ../../scss/main.scss */
+/* line 656, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 655, ../../scss/main.scss */
+/* line 660, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1014,7 +1019,7 @@ footer.base-section-padding a:hover {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 667, ../../scss/main.scss */
+/* line 672, ../../scss/main.scss */
 .slider-pagination li.active {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -1027,7 +1032,7 @@ footer.base-section-padding a:hover {
 /****************************************
 * Misc.
 ****************************************/
-/* line 678, ../../scss/main.scss */
+/* line 683, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
