--- a/public/css/main.css
+++ b/public/css/main.css
@@ -456,11 +456,11 @@ button:focus {
 }
 /* line 306, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
-  -moz-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
-  -ms-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
-  -o-transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
-  transform: translate3d(-50%, 90px, 0) rotateZ(-3deg);
+  -webkit-transform: translate3d(-50%, 30px, 0);
+  -moz-transform: translate3d(-50%, 30px, 0);
+  -ms-transform: translate3d(-50%, 30px, 0);
+  -o-transform: translate3d(-50%, 30px, 0);
+  transform: translate3d(-50%, 30px, 0);
   -webkit-transform-origin: 25% 50%;
   -moz-transform-origin: 25% 50%;
   -ms-transform-origin: 25% 50%;
@@ -511,14 +511,14 @@ button:focus {
 }
 /* line 330, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
-  -moz-transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
-  -o-transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
-  transition: all 1100ms cubic-bezier(0.77, 0, 0.175, 1);
-  -webkit-transition-delay: 1200ms;
-  -moz-transition-delay: 1200ms;
-  -o-transition-delay: 1200ms;
-  transition-delay: 1200ms;
+  -webkit-transition: all 1500ms ease;
+  -moz-transition: all 1500ms ease;
+  -o-transition: all 1500ms ease;
+  transition: all 1500ms ease;
+  -webkit-transition-delay: 1400ms;
+  -moz-transition-delay: 1400ms;
+  -o-transition-delay: 1400ms;
+  transition-delay: 1400ms;
   -webkit-backface-visibility: hidden;
 }
 /* line 342, ../../scss/main.scss */
@@ -541,11 +541,11 @@ button:focus {
 }
 /* line 347, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
-  -webkit-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  -moz-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  -ms-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  -o-transform: translate3d(-50%, 0, 0) rotateZ(0deg);
-  transform: translate3d(-50%, 0, 0) rotateZ(0deg);
+  -webkit-transform: translate3d(-50%, 0, 0);
+  -moz-transform: translate3d(-50%, 0, 0);
+  -ms-transform: translate3d(-50%, 0, 0);
+  -o-transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-50%, 0, 0);
 }
 /* line 353, ../../scss/main.scss */
 .js .features h2,
@@ -865,7 +865,7 @@ button:focus {
 /* line 559, ../../scss/main.scss */
 .macbook {
   position: relative;
-  max-width: 828px;
+  max-width: 938px;
   margin: 30px auto 0;
 }
 @media screen and (min-width: 400px) {
@@ -1030,10 +1030,10 @@ footer.base-section-padding a:hover {
 }
 /* line 695, ../../scss/main.scss */
 .slider-viewport li img {
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  -o-transition: all 1000ms ease;
-  transition: all 1000ms ease;
+  -webkit-transition: all 2000ms ease;
+  -moz-transition: all 2000ms ease;
+  -o-transition: all 2000ms ease;
+  transition: all 2000ms ease;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transform-origin: 50% 100%;
