--- a/public/css/main.css
+++ b/public/css/main.css
@@ -863,6 +863,7 @@ button:focus {
 /* line 557, ../../scss/main.scss */
 .macbook {
   position: relative;
+  width: 100%;
   max-width: 994px;
   margin: 30px auto 0;
 }
@@ -872,7 +873,7 @@ button:focus {
     margin: 50px auto 0;
   }
 }
-/* line 566, ../../scss/main.scss */
+/* line 567, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
@@ -882,24 +883,24 @@ button:focus {
   left: 101px;
   overflow: hidden;
 }
-/* line 575, ../../scss/main.scss */
+/* line 576, ../../scss/main.scss */
 .macbook .macbook-viewport img {
   width: 75%;
   pointer-events: none;
 }
-/* line 581, ../../scss/main.scss */
+/* line 582, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 588, ../../scss/main.scss */
+/* line 589, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 592, ../../scss/main.scss */
+/* line 593, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -908,34 +909,34 @@ button:focus {
   margin-top: 40px;
 }
 @media screen and (min-width: 400px) {
-  /* line 592, ../../scss/main.scss */
+  /* line 593, ../../scss/main.scss */
   .feature {
     margin-top: 70px;
   }
 }
-/* line 603, ../../scss/main.scss */
+/* line 604, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 605, ../../scss/main.scss */
+/* line 606, ../../scss/main.scss */
 .feature i {
   font-size: 70px;
   margin-bottom: 15px;
 }
 @media screen and (min-width: 400px) {
-  /* line 605, ../../scss/main.scss */
+  /* line 606, ../../scss/main.scss */
   .feature i {
     font-size: 90px;
     margin-bottom: 65px;
   }
 }
-/* line 615, ../../scss/main.scss */
+/* line 616, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 621, ../../scss/main.scss */
+/* line 622, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -947,50 +948,50 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 628, ../../scss/main.scss */
+/* line 629, ../../scss/main.scss */
 .telegraphic {
   padding-bottom: 95px;
   background-image: url("../img/telegraphic-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 634, ../../scss/main.scss */
+/* line 635, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 20px;
 }
-/* line 636, ../../scss/main.scss */
+/* line 637, ../../scss/main.scss */
 .telegraphic .container {
   margin: 0 auto 50px;
 }
 
-/* line 639, ../../scss/main.scss */
+/* line 640, ../../scss/main.scss */
 footer.base-section-padding {
   padding: 80px 0 300px;
 }
-/* line 642, ../../scss/main.scss */
+/* line 643, ../../scss/main.scss */
 footer.base-section-padding .sign-up {
   margin: 40px 0 150px;
 }
-/* line 645, ../../scss/main.scss */
+/* line 646, ../../scss/main.scss */
 footer.base-section-padding .sign-up .base-input {
   border: 2px solid #d0d0d0;
 }
-/* line 648, ../../scss/main.scss */
+/* line 649, ../../scss/main.scss */
 footer.base-section-padding i {
   position: relative;
   top: 15px;
   margin: 0 -3px 0;
 }
-/* line 654, ../../scss/main.scss */
+/* line 655, ../../scss/main.scss */
 footer.base-section-padding a {
   color: #7118b2;
 }
-/* line 657, ../../scss/main.scss */
+/* line 658, ../../scss/main.scss */
 footer.base-section-padding a:hover {
   color: #8e1edf;
 }
 
-/* line 661, ../../scss/main.scss */
+/* line 662, ../../scss/main.scss */
 .slider {
   width: 100%;
   margin: 0 auto;
@@ -998,7 +999,7 @@ footer.base-section-padding a:hover {
   background-size: cover;
 }
 @media screen and (min-width: 400px) {
-  /* line 661, ../../scss/main.scss */
+  /* line 662, ../../scss/main.scss */
   .slider {
     height: 530px;
     width: 850px;
@@ -1006,7 +1007,7 @@ footer.base-section-padding a:hover {
   }
 }
 
-/* line 675, ../../scss/main.scss */
+/* line 676, ../../scss/main.scss */
 .slider-glare {
   display: block;
   position: absolute;
@@ -1017,19 +1018,19 @@ footer.base-section-padding a:hover {
   cursor: pointer;
 }
 
-/* line 685, ../../scss/main.scss */
+/* line 686, ../../scss/main.scss */
 .slider-viewport {
   position: relative;
   padding-bottom: 60%;
   height: 100%;
 }
 @media screen and (min-width: 400px) {
-  /* line 685, ../../scss/main.scss */
+  /* line 686, ../../scss/main.scss */
   .slider-viewport {
     padding-bottom: 0;
   }
 }
-/* line 694, ../../scss/main.scss */
+/* line 695, ../../scss/main.scss */
 .slider-viewport li {
   position: absolute;
   z-index: 1;
@@ -1037,14 +1038,14 @@ footer.base-section-padding a:hover {
   cursor: pointer;
 }
 @media screen and (min-width: 400px) {
-  /* line 694, ../../scss/main.scss */
+  /* line 695, ../../scss/main.scss */
   .slider-viewport li {
     width: 737px;
     top: 52px;
     left: 52px;
   }
 }
-/* line 706, ../../scss/main.scss */
+/* line 707, ../../scss/main.scss */
 .slider-viewport li img {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -1061,7 +1062,7 @@ footer.base-section-padding a:hover {
   width: 100%;
   pointer-events: none;
 }
-/* line 715, ../../scss/main.scss */
+/* line 716, ../../scss/main.scss */
 .slider-viewport li.active img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1069,17 +1070,17 @@ footer.base-section-padding a:hover {
   z-index: 2;
   float: left;
 }
-/* line 722, ../../scss/main.scss */
+/* line 723, ../../scss/main.scss */
 .slider-viewport li.remove img {
   z-index: 1;
 }
 
-/* line 728, ../../scss/main.scss */
+/* line 729, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 732, ../../scss/main.scss */
+/* line 733, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1099,7 +1100,7 @@ footer.base-section-padding a:hover {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 744, ../../scss/main.scss */
+/* line 745, ../../scss/main.scss */
 .slider-pagination li.active {
   background: #fff;
 }
@@ -1107,7 +1108,7 @@ footer.base-section-padding a:hover {
 /****************************************
 * Misc.
 ****************************************/
-/* line 752, ../../scss/main.scss */
+/* line 753, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
